stop using .toList()